--- a/views/registration/registration-student.hbs
+++ b/views/registration/registration-student.hbs
@@ -1,105 +1,112 @@
 {{#extend "lib/simple"}}
-  {{#content "scripts" mode="append"}}
-      <script src="/scripts/dataprivacy/registration.js" type="text/javascript" defer></script>
-  {{/content}}
-  {{#content "styles" mode="append"}}
-      <link rel="stylesheet" href="/styles/administration/dataprivacy.css"/>
-  {{/content}}
-  {{#content "page"}}
-    {{#embed "lib/forms/paginatedForm" sections=4 action="/registration/submit" method="post" class="registration-form student"}}
-      {{#content "panels"}}
-      <input type="hidden" name="classOrSchoolId" value="{{user.classOrSchoolId}}"/>
-      <input type="hidden" name="roles" value="student"/>
+{{#content "scripts" mode="append"}}
+<script src="/scripts/dataprivacy/registration.js" type="text/javascript" defer></script>
+{{/content}}
+{{#content "styles" mode="append"}}
+<link rel="stylesheet" href="/styles/administration/dataprivacy.css" />
+{{/content}}
+{{#content "page"}}
+{{#embed "lib/forms/paginatedForm" sections=4 action="/registration/submit" method="post" class="registration-form student"}}
+{{#content "panels"}}
+<input type="hidden" name="classOrSchoolId" value="{{user.classOrSchoolId}}" />
+<input type="hidden" name="roles" value="student" />
 
-      {{#if user.sso}}<input type="hidden" name="sso" value="{{user.sso}}"/>{{/if}}
-      {{#if user.account}}<input type="hidden" name="account" value="{{user.account}}"/>{{/if}}
+{{#if user.sso}}<input type="hidden" name="sso" value="{{user.sso}}" />{{/if}}
+{{#if user.account}}<input type="hidden" name="account" value="{{user.account}}" />{{/if}}
 
-      {{#if user.importHash}}<input type="hidden" name="importHash" value="{{user.importHash}}"/>{{/if}}
-      {{#if user.userId}}<input type="hidden" name="userId" value="{{user.userId}}"/>{{/if}}
+{{#if user.importHash}}<input type="hidden" name="importHash" value="{{user.importHash}}" />{{/if}}
+{{#if user.userId}}<input type="hidden" name="userId" value="{{user.userId}}" />{{/if}}
 
-      <section data-panel="section-1">
-        <h4>Persönliche Daten</h4>
-        <p>Die {{theme.short_title}} bewahrt die Nutzerdaten sicher auf und gibt sie nicht an Dritte weiter. Die Verarbeitung der Daten erfolgt entsprechend der hohen gesetzlichen Datenschutz-Anforderungen.</p>
-        <p>Für die Nutzung der {{theme.short_title}} benötigen wir folgende Angaben:</p>
-        <div class="row">
-          <div class="form-group col-md-6 col-sm-12">
+<section data-panel="section-1">
+    <h2 class="h4">Persönliche Daten</h2>
+    <p>Die {{theme.short_title}} bewahrt die Nutzerdaten sicher auf und gibt sie nicht an Dritte weiter. Die
+        Verarbeitung der Daten erfolgt entsprechend der hohen gesetzlichen Datenschutz-Anforderungen.</p>
+    <p>Für die Nutzung der {{theme.short_title}} benötigen wir folgende Angaben:</p>
+    <div class="row">
+        <div class="form-group col-md-6 col-sm-12">
             <label>Vorname: <sup>*</sup></label>
-            <input class="form-control linked" name="firstName" type="text" placeholder="Dein offizieller Vorname, kein Spitzname"
-                value="{{user.firstName}}" required {{#if user.firstName}}readonly{{/if}}/>
-          </div>
-          <div class="form-group col-md-6 col-sm-12">
+            <input class="form-control linked" name="firstName" type="text"
+                placeholder="Dein offizieller Vorname, kein Spitzname" value="{{user.firstName}}" required
+                {{#if user.firstName}}readonly{{/if}} />
+        </div>
+        <div class="form-group col-md-6 col-sm-12">
             <label>Nachname: <sup>*</sup></label>
             <input class="form-control linked" name="lastName" type="text" placeholder="Dein offizieller Nachname"
-                value="{{user.lastName}}" required {{#if user.lastName}}readonly{{/if}}/>
-          </div>
+                value="{{user.lastName}}" required {{#if user.lastName}}readonly{{/if}} />
         </div>
+    </div>
 
-        <div class="form-group">
-            <label>Geburtsdatum: <sup>*</sup></label>
-            <input class="form-control linked" name="birthDate" type="text" 
-                data-date data-min-date="{{datePickerTodayMinus 100 0 0}}" data-max-date="{{datePickerTodayMinus 16 0 0}}" 
-                value="{{#if user.birthday}}{{dateToPicker user.birthday}}{{else}}{{datePickerTodayMinus 17 0 0 "DD.MM.YYYY"}}{{/if}}"
-                required {{#if user.birthday}}readonly{{/if}} autocomplete="off" />
+    <div class="form-group">
+        <label>Geburtsdatum: <sup>*</sup></label>
+        <input class="form-control linked" name="birthDate" type="text" data-date
+            data-min-date="{{datePickerTodayMinus 100 0 0}}" data-max-date="{{datePickerTodayMinus 16 0 0}}"
+            value="{{#if user.birthday}}{{dateToPicker user.birthday}}{{else}}{{datePickerTodayMinus 17 0 0 "DD.MM.YYYY"}}{{/if}}"
+            required {{#if user.birthday}}readonly{{/if}} autocomplete="off" />
 
-        </div>
+    </div>
 
-        <div class="form-group">
-            <label>E-Mail-Adresse: <sup>*</sup></label>
-            <input class="form-control linked" type="email" name="email" placeholder="schueler@schul-cloud.org"
-                value="{{user.email}}" required {{#if user.email}}readonly{{/if}}>
-        </div>
-        <p class="explanation nomargin">
-            Die E-Mail-Adresse ermöglicht den Versand von Benachrichtigungen und erleichtert das Zurücksetzen des Passwortes.
-        </p>
-      </section>
-
-
-      <section data-panel="section-2">
-        <h4>Einwilligungserklärung</h4>
-        <p>Bitte bestätige folgende Einwilligungserklärungen, damit du die {{theme.short_title}} nutzen kannst.</p>
-        <p>Ich, <b data-from="firstName"></b> <b data-from="lastName"></b>, erkläre Folgendes:</p>
-          {{#embed "registration/forms/einwilligungserklaerung"}}{{/embed}}
-
-      </section>
+    <div class="form-group">
+        <label>E-Mail-Adresse: <sup>*</sup></label>
+        <input class="form-control linked" type="email" name="email" placeholder="schueler@schul-cloud.org"
+            value="{{user.email}}" required {{#if user.email}}readonly{{/if}}>
+    </div>
+    <p class="explanation nomargin">
+        Die E-Mail-Adresse ermöglicht den Versand von Benachrichtigungen und erleichtert das Zurücksetzen des
+        Passwortes.
+    </p>
+</section>
 
 
-      <section data-panel="section-3" class="submit-page" data-feature="pin">
-          <h4>Fast geschafft!</h4>
-          <p>Wir habe soeben eine E-Mail an deine angegebene Adresse gesendet. Bitte gib den darin enthaltenen Code hier ein, um die Registrierung abzuschließen.</p>
-          <p>Keine E-Mail erhalten? <button type="button" class="btn-link" id="resend-pin">Code erneut senden</button>.</p>
-          <div id="pinverification">
-              {{#embed "registration/pin" digits=4 pattern="[0-9]" required="true" name="pin" class="mail-validation my-1"}}{{/embed}}
-          </div>
-          <input type="hidden" name="password_1" class="student-password-input" />
-          <input type="hidden" name="password_2" class="student-password-input" />
-      </section>
+<section data-panel="section-2">
+    <h2 class="h4">Einwilligungserklärung</h2>
+    <p>Bitte bestätige folgende Einwilligungserklärungen, damit du die {{theme.short_title}} nutzen kannst.</p>
+    <p>Ich, <b data-from="firstName"></b> <b data-from="lastName"></b>, erkläre Folgendes:</p>
+    {{#embed "registration/forms/einwilligungserklaerung"}}{{/embed}}
+
+</section>
 
 
-      <section data-panel="section-4">
-        <h4>Vielen Dank für die Registrierung in der {{theme.short_title}}!</h4>
+<section data-panel="section-3" class="submit-page" data-feature="pin">
+    <h2 class="h4">Fast geschafft!</h2>
+    <p>Wir habe soeben eine E-Mail an deine angegebene Adresse gesendet. Bitte gib den darin enthaltenen Code hier ein,
+        um die Registrierung abzuschließen.</p>
+    <p>Keine E-Mail erhalten? <button type="button" class="btn-link" id="resend-pin">Code erneut senden</button>.</p>
+    <div id="pinverification">
+        {{#embed "registration/pin" digits=4 pattern="[0-9]" required="true" name="pin" class="mail-validation my-1"}}{{/embed}}
+    </div>
+    <input type="hidden" name="password_1" class="student-password-input" />
+    <input type="hidden" name="password_2" class="student-password-input" />
+</section>
 
-        {{#if user.sso}}
-            <p>Deine SSO-Accountdaten sind jetzt freigeschaltet.</p>
-        {{else}}
-            <div id="userdata-summary">
-                <p>Mit folgenden Daten kannst du dich in der {{theme.short_title}} anmelden. Bitte bewahre die Anmeldedaten für den ersten Login auf.</p>
-                <div class="print">
-                    <div class="recap">
-                        <!--<p>Nutzername: <i data-from="firstName"></i>.<i data-from="lastName"></i></p>-->
-                        <p>E-Mail: <i data-from="email"></i></p>
-                        <p>Passwort: <i class="student-password">********</i></p>
-                    </div>
-                    <div class="btn btn-secondary btn-print" data-toggle="tooltip" title="" data-original-title="Anmeldedaten drucken">
-                        <i class="fa fa-print"></i> Drucken
-                    </div>
-                </div>
-                <p>Du kannst dich jetzt in der Schul-Cloud anmelden. Beim ersten Login muss ein neues Passwort gewählt werden.</p>
+
+<section data-panel="section-4">
+    <h2 class="h4">Vielen Dank für die Registrierung in der {{theme.short_title}}!</h2>
+
+    {{#if user.sso}}
+    <p>Deine SSO-Accountdaten sind jetzt freigeschaltet.</p>
+    {{else}}
+    <div id="userdata-summary">
+        <p>Mit folgenden Daten kannst du dich in der {{theme.short_title}} anmelden. Bitte bewahre die Anmeldedaten für
+            den ersten Login auf.</p>
+        <div class="print">
+            <div class="recap">
+                <!--<p>Nutzername: <i data-from="firstName"></i>.<i data-from="lastName"></i></p>-->
+                <p>E-Mail: <i data-from="email"></i></p>
+                <p>Passwort: <i class="student-password">********</i></p>
             </div>
-        {{/if}}
+            <div class="btn btn-secondary btn-print" data-toggle="tooltip" title=""
+                data-original-title="Anmeldedaten drucken">
+                <i class="fa fa-print"></i> Drucken
+            </div>
+        </div>
+        <p>Du kannst dich jetzt in der Schul-Cloud anmelden. Beim ersten Login muss ein neues Passwort gewählt werden.
+        </p>
+    </div>
+    {{/if}}
 
-        <a class="btn btn-primary" href="/logout">Login öffnen</a>
-      </section>
-      {{/content}}
-    {{/embed}}
-  {{/content}}
+    <a class="btn btn-primary" href="/logout">Login öffnen</a>
+</section>
+{{/content}}
+{{/embed}}
+{{/content}}
 {{/extend}}
