--- a/views/team/team.hbs
+++ b/views/team/team.hbs
@@ -3,15 +3,17 @@
         {{teamLength}}
     </div>
     {{#each teams as |currentteam index|}}
-    <h4>{{name}}</h4>
+    <h2 class="h4">{{name}}</h2>
     <div class="container">
         <div class="row">
             {{#each currentteam.team}}
-            {{#if subheader_before}}<h5>{{subheader_before}}</h5>{{/if}}
+            {{#if subheader_before}}<h3 class="h5">{{subheader_before}}</h3>{{/if}}
             <div id="modal-container-personcard">
                 <div class="modal-background {{#if ../../loggedin}}modal-padding{{/if}}">
-                    <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-                        <div class="modal-dialog" style="margin-top: {{#if longDesc}} {{ longDesc }} {{else}} 20vh {{/if}}" role="document">
+                    <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog"
+                        aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                        <div class="modal-dialog"
+                            style="margin-top: {{#if longDesc}} {{ longDesc }} {{else}} 20vh {{/if}}" role="document">
                             <div class="modal-content">
                                 <div class="modal-header">
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -26,8 +28,9 @@
                                             </div>
                                         </div>
                                         <div class="col-md-7">
-                                            <h2 class="person-title" data-lastname="{{lastName}}" style="text-align: left">{{title}} {{firstName}} {{lastName}}</h2>
-                                            <h5 class="person-desc" style="text-align: left">{{position}}</h5>
+                                            <h4 class="person-title h2" data-lastname="{{lastName}}"
+                                                style="text-align: left">{{title}} {{firstName}} {{lastName}}</h4>
+                                            <h5 class="person-desc h5" style="text-align: left">{{position}}</h5>
                                             <p style="text-align: left">{{{description}}}</p>
                                         </div>
                                     </div>
@@ -48,7 +51,8 @@
                             <div class="card h-100 person">
                                 <img class="card-img-top circular" src="{{pictureUrl}}">
                                 <div class="card-block">
-                                    <h4 class="person-title card-title" data-lastname="{{lastName}}">{{firstName}} {{lastName}}</h4>
+                                    <h3 class="person-title card-title h4" data-lastname="{{lastName}}">{{firstName}}
+                                        {{lastName}}</h3>
                                     <p class="person-desc card-text">{{position}}</p>
                                 </div>
                             </div>
