--- a/views/team/team_guest.hbs
+++ b/views/team/team_guest.hbs
@@ -1,30 +1,32 @@
 {{#extend "lib/default"}}
 
-    {{#content "styles" mode="append"}}
-        <link rel="stylesheet" href="/styles/authentication/home.css"/>
-        <link rel="stylesheet" href="/styles/team/team.css"/>
-        <style>
-            header a[href='/team']{
-                background-color: #f8a41b;
-            }
-        </style>
-    {{/content}}
+{{#content "styles" mode="append"}}
+<link rel="stylesheet" href="/styles/authentication/home.css" />
+<link rel="stylesheet" href="/styles/team/team.css" />
+<style>
+    header a[href='/team'] {
+        background-color: #f8a41b;
+    }
+</style>
+{{/content}}
 
-    {{#content "scripts" mode="append"}}
-        <script type="text/javascript" src="/scripts/team.js" defer></script>
-        <script type="text/javascript" src="/vendor/vanilla-tilt.min.js" defer></script>
-    {{/content}}
+{{#content "scripts" mode="append"}}
+<script type="text/javascript" src="/scripts/team.js" defer></script>
+<script type="text/javascript" src="/vendor/vanilla-tilt.min.js" defer></script>
+{{/content}}
 
-    {{#content "body"}}
-        {{#embed "lib/header"}}{{/embed}}
-        <div class="container">
-            <div class="card">
-                <div class="card-block">
-                    <div class="section-title"><h3>{{title}}</h3></div>
-                    {{#embed "team/team"}}{{/embed}}
-                </div>
+{{#content "body"}}
+{{#embed "lib/header"}}{{/embed}}
+<div class="container">
+    <div class="card">
+        <div class="card-block">
+            <div class="section-title">
+                <h2 class="h3">{{title}}</h2>
             </div>
+            {{#embed "team/team"}}{{/embed}}
         </div>
-        {{#embed "lib/extended_footer"}}{{/embed}}
-    {{/content}}
+    </div>
+</div>
+{{#embed "lib/extended_footer"}}{{/embed}}
+{{/content}}
 {{/extend}}
