--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -2,9 +2,9 @@
     {{#embed "authentication/section" class="content-width-max"}}
         {{#content "body"}}
             {{#unless loggedin}}
-                <h2 class="section-title center">{{title}}</h2>
+                <h1 class="h2 section-title center">{{title}}</h1>
             {{/unless}}
-            <h3 class="section-title center">Über die HPI Schul-Cloud</h3>
+            <h2 class="h3 section-title center">Über die HPI Schul-Cloud</h2>
             <p>Das <a href="https://hpi.de" target="_blank">Hasso-Plattner-Institut</a> für Digital Engineering entwickelt unter der Leitung von Prof. Dr. Christoph Meinel zusammen mit <a href="https://www.mint-ec.de/" target="_blank">MINT-EC</a>, dem nationalen Excellence-Schulnetzwerk von über 300 Schulen bundesweit und unterstützt vom Bundesministerium für Bildung und Forschung die HPI Schul-Cloud. Sie soll die technische Grundlage schaffen, dass Lehrkräfte und Schüler in jedem Unterrichtsfach auch moderne digitale Lehr- und Lerninhalte nutzen können, und zwar so, wie Apps über Smartphones oder Tablets nutzbar sind.</p>
             <ul>
                 <li>Mehr Informationen:
@@ -44,9 +44,9 @@
     {{#embed "authentication/section" style="primary" class="content-width-max"}}
         {{#content "body"}}
             <div class="section-partner">
-                <h3 class="section-title center">Pilotschulen</h3>
+                <h2 class="h3 section-title center">Pilotschulen</h2>
                 <p>Best Practice: Auf dem Digitalgipfel 2019 in Nürnberg konnten alle Beteiligten digitalgestützen Unterricht mit der HPI Schul-Cloud live miterleben.</p>
-                <h4>Best Practice Schulen</h4>
+                <h3 class="h4">Best Practice Schulen</h3>
                 <div class="row">
                     {{#each schools.bp}}
                         <div class="partner-box-wrapper col-xs-6 col-md-3">
@@ -77,7 +77,7 @@
                     </div>
                 </div>
 
-                <h4>Pilotschulen <span style="font-size: 12px;">(Start März 2017)</span></h4>
+                <h3 class="h4">Pilotschulen <span style="font-size: 12px;">(Start März 2017)</span></h3>
                 <div class="row">
                     {{#each schools.march2017}}
                         <div class="partner-box-wrapper col-xs-6 col-md-3">
@@ -108,7 +108,7 @@
                     </div>
                 </div>
 
-                <h4>Pilotschulen <span style="font-size: 12px;">(Start Mai 2018)</span></h4>
+                <h3 class="h4">Pilotschulen <span style="font-size: 12px;">(Start Mai 2018)</span></h3>
                 <div class="row">
                     {{#each schools.mai2018}}
                         <div class="partner-box-wrapper col-xs-6 col-md-3">
@@ -139,7 +139,7 @@
                     </div>
                 </div>
 
-                <h4>Pilotschulen <span style="font-size: 12px;">(Start Februar 2019)</span></h4>
+                <h3 class="h4">Pilotschulen <span style="font-size: 12px;">(Start Februar 2019)</span></h3>
                 <div class="row">
                     {{#each schools.feb2019}}
                         <div class="partner-box-wrapper col-xs-6 col-md-3">
@@ -205,7 +205,7 @@
     {{#embed "authentication/section" class="content-width-max"}}
         {{#content "body"}}
 
-            <h3 class="section-title center">Bildungswissenschaftliche Begleitung</h3>
+            <h2 class="h3 section-title center">Bildungswissenschaftliche Begleitung</h2>
             <p>Zur pädagogisch-didaktischen Unterstützung des Projekts im Sinne der Entwicklung von Beispielen für die
             Unterrichtsgestaltung
             mit verfügbarem digitalen Lernmaterial aus der HPI Schul-Cloud und dem Erkenntnisgewinn über die digitale
@@ -255,7 +255,7 @@
     {{/embed}}
     {{#embed "authentication/section" style="accent" class="content-width-max"}}
         {{#content "body"}}
-            <h3 class="section-title center">Veröffentlichungen</h3>
+            <h2 class="h3 section-title center">Veröffentlichungen</h2>
             <div class="embed-pdf">
                 <div class="row embed-pdf-row">
                     <div class="single-pdf col-xs-12 col-md-4" data-pdf="https://schul-cloud-hpi.s3.hidrive.strato.com/Dokumente/Die-HPI-Schul-Cloud_Roll-Out-einer-Cloud-Architektur-für-Schulen-in-Deutschland.pdf">
@@ -289,7 +289,7 @@
             </div> <!-- .container.embed-pdf -->
             <div class="content-width-max">
 
-            <h4>Weitere Veröffentlichungen</h4>
+            <h3 class="h4">Weitere Veröffentlichungen</h3>
             <ul>
                 <br/>
                 <li>Malyska, V., Renz, J. & Meinel, C. (2018). Eine Innovation für Deutschlands Bildungslandschaft – Projekt
@@ -300,7 +300,7 @@
                 <li>Malyska, V. & Meinel, C. (2018). Lernen in Wolken. didacta DIGITAL, 1/18, S. 16–17</li>
             </ul>
             <br/>
-            <h4>Aufzeichnungen von Vorträgen</h4>
+            <h3 class="h4">Aufzeichnungen von Vorträgen</h3>
             <ul>
                 <li><a href="https://www.tele-task.de/series/1149/" target="_blank">Vorträge des 1. HPI Schul-Cloud-Forums (April
                     2017)</a></li>
@@ -312,7 +312,7 @@
     {{/embed}}
     {{#embed "authentication/section" class="content-width-max"}}
         {{#content "body"}}
-            <h3 class="section-title center">Unsere Auszeichnungen</h3>
+            <h2 class="h3 section-title center">Unsere Auszeichnungen</h2>
             <div class="embed-award">
                 <div class="row">
                     <div class="single-award col-xs-12 col-md-6">
