--- a/theme/brb/views/help/mail-card.hbs
+++ b/theme/brb/views/help/mail-card.hbs
@@ -1,4 +1,2 @@
-<p>Manche Anliegen brauchen mehr Möglichkeiten, als die Felder der Kontaktfunktion zulassen. Schreib uns eine E-Mail, wenn du mit uns ins Gespräch kommen willst:</p>
-<div id="email-addresses">
-    <a href="mailto:feedback@schul-cloud.org" target="_blank" rel="noopener">feedback@schul-cloud.org</a> ans HPI für Ideen, Kritik und Wünsche rund um die Cloud selbst.
-</div>
+<p>Manche Anliegen brauchen mehr Möglichkeiten, als die Felder der Kontaktfunktion zulassen. Schreib uns eine E-Mail, wenn du mit uns ins Gespräch kommen willst. <br/>
+Die richtigen Kontaktpersonen für alle Situationen findest du im <a href="help/faq/people">Ansprechpartner-Bereich</a>. </p>
