--- a/theme/brb/views/help/people.hbs
+++ b/theme/brb/views/help/people.hbs
@@ -19,7 +19,20 @@
 						</div>
 						<div class="collapse show in">
 							<div class="card-block">
-								Das Landesinstitut für Schule und Medien Berlin-Brandenburg (LISUM) steht für alle nicht-technischen Fragen rund um die Schul-Cloud Brandenburg bereit und ist unter folgender E-Mail-Adresse erreichbar:<br><a href="mailto:schul-cloud@bildungsserver.berlin-brandenburg.de" target="blank" rel="noopener" class="externalLink">schul-cloud@bildungsserver.berlin-brandenburg.de</a>
+								Für pädagogische Fragen richte dich bitte an das Landesinstitut für Schule und Medien Berlin-Brandenburg (LISUM) unter folgender E-Mail-Adresse:<br><a href="mailto:schul-cloud@bildungsserver.berlin-brandenburg.de" target="blank" rel="noopener" class="externalLink">schul-cloud@bildungsserver.berlin-brandenburg.de</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="card">
+						<div class="card-header" role="tab" id="heading-{{@index}}">
+							<h2 class="h5 mb-0">
+								DAB
+							</h2>
+						</div>
+						<div class="collapse show in">
+							<div class="card-block">
+								Für organisatorische Fragen richte dich bitte an die DigitalAgentur Brandenburg (DAB) unter folgender E-Mail-Adresse:<br><a href="mailto:0001_schulcloud@digital-agentur.de" target="blank" rel="noopener" class="externalLink">0001_schulcloud@digital-agentur.de</a>
 							</div>
 						</div>
 					</div>
@@ -32,7 +45,20 @@
 						</div>
 						<div id="collapse-{{@index}}" class="collapse show in">
 							<div class="card-block">
-								Das Hasso-Plattner-Institut steht für alle Fragen technischer Natur bereit. Bei Problemen mit der Schul-Cloud selbst oder bei Schwierigkeiten bezüglich der Bedienung dient folgende E-Mail-Adresse als erster Anlaufpunkt:<br><a href="mailto:feedback@schul-cloud.org" target="blank" rel="noopener" class="externalLink">feedback@schul-cloud.org</a>
+								Für technsiche Fragen richte dich bitte an das Hasso-Plattner-Institut unter folgender E-Mail-Adresse:<br><a href="mailto:brandenburg@schul-cloud.org" target="blank" rel="noopener" class="externalLink">brandenburg@schul-cloud.org</a>
+							</div>
+						</div>
+					</div>
+
+					<div class="card">
+						<div class="card-header" role="tab" id="heading-{{@index}}">
+							<h2 class="h5 mb-0">
+								Feedback / Wünsche / Probleme bei der Nutzung
+							</h2>
+						</div>
+						<div id="collapse-{{@index}}" class="collapse show in">
+							<div class="card-block">
+								Für die Meldung von Problemen oder Wünschen hinsichtlich der Bedienung der Schul-Cloud verwende bitte das Kontaktformular oder sende eine E-Mail an <br><a href="mailto:feedback@schul-cloud.org" target="blank" rel="noopener" class="externalLink">feedback@schul-cloud.org</a>
 							</div>
 						</div>
 					</div>
