--- a/theme/open/views/help/people.hbs
+++ b/theme/open/views/help/people.hbs
@@ -14,12 +14,12 @@
 					<div class="card">
 						<div class="card-header" role="tab" id="heading-{{@index}}">
 							<h2 class="h5 mb-0">
-								HPI
+								Feedback / Wünsche / Probleme bei der Nutzung
 							</h2>
 						</div>
 						<div id="collapse-{{@index}}" class="collapse show in">
 							<div class="card-block">
-								Das Hasso-Plattner-Institut steht für alle Fragen zur HPI Schul-Cloud zur Verfügung. Wir sind unter folgender Email-Adresse erreichbar:<br><a href="mailto:feedback@schul-cloud.org" target="blank" rel="noopener" class="externalLink">feedback@schul-cloud.org</a>
+								Für die Meldung von Problemen oder Wünschen hinsichtlich der Bedienung der Schul-Cloud verwende bitte das Kontaktformular oder sende eine E-Mail an <br><a href="mailto:feedback@schul-cloud.org" target="blank" rel="noopener" class="externalLink">feedback@schul-cloud.org</a>
 							</div>
 						</div>
 					</div>
