--- a/views/help/contact.hbs
+++ b/views/help/contact.hbs
@@ -3,7 +3,7 @@
   <fieldset class="switch_wrapper" id="message_target">
     <div class="switch">
       <input type="radio" id="admin" name="message_target" value="admin" {{#if adminFormIsActive}}checked{{/if}}>
-      <label for="admin" tabindex="0" role="button">Admin</label>
+      <label for="admin" tabindex="0" role="button">Schul-Admin</label>
       <input type="radio" id="team" name="message_target" value="team" {{#if teamFormIsActive}}checked{{/if}}>
       <label for="team" tabindex="0" role="button"> {{theme.short_title}}-Team</label>
     </div>
