--- a/views/help/people.hbs
+++ b/views/help/people.hbs
@@ -32,7 +32,7 @@
 						</div>
 						<div id="collapse-{{@index}}" class="collapse show in">
 							<div class="card-block">
-								Das Hasso-Plattner-Institut steht für alle Fragen technischer Natur bereit. Bei Problemen mit der Schul-Cloud selbst oder bei Schwierigkeiten bezüglich der Bedienung dient folgende E-Mail-Adresse als erster Anlaufpunkt:<br><a href="mailto:feedback@schul-cloud.org" target="blank" rel="noopener" class="externalLink">feedback@schul-cloud.org</a>
+								Das Hasso-Plattner-Institut steht für alle Fragen technischer Natur bereit. Bei Problemen mit der Schul-Cloud selbst oder bei Schwierigkeiten bezüglich der Bedienung verwende bitte das Kontaktformular oder sende eine E-Mail an:<br><a href="mailto:feedback@schul-cloud.org" target="blank" rel="noopener" class="externalLink">feedback@schul-cloud.org</a>
 							</div>
 						</div>
 					</div>
